compiler/typ/tests/fixtures/diagnostics/0707_fcm_local_abstract_wrong_arg_05.ml.infer.expected
File "0707_fcm_local_abstract_wrong_arg_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0707_fcm_local_abstract_wrong_arg_05 is not a valid module name.

File "0707_fcm_local_abstract_wrong_arg_05.ml", line 14, characters 70-74:
14 | let _ = use_epsilon (module M_epsilon : Id_epsilon with type t = int) true
                                                                           ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
